--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,3 +15,7 @@ jobs:
         java-version: 1.8
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - uses: actions/upload-artifact@v2
+      with:
+        name: querqy-plugin
+        path: /home/runner/work/querqy-elasticsearch/querqy-elasticsearch/target/
